; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_gif.c_gif_set_bpf_tap.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_gif.c_gif_set_bpf_tap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gif_softc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @gif_set_bpf_tap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gif_set_bpf_tap(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.gif_softc*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.gif_softc* @ifnet_softc(i32 %8)
  store %struct.gif_softc* %9, %struct.gif_softc** %7, align 8
  %10 = load %struct.gif_softc*, %struct.gif_softc** %7, align 8
  %11 = call i32 @GIF_LOCK(%struct.gif_softc* %10)
  %12 = load i32, i32* %5, align 4
  %13 = load %struct.gif_softc*, %struct.gif_softc** %7, align 8
  %14 = getelementptr inbounds %struct.gif_softc, %struct.gif_softc* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* %6, align 4
  %16 = load %struct.gif_softc*, %struct.gif_softc** %7, align 8
  %17 = getelementptr inbounds %struct.gif_softc, %struct.gif_softc* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  %18 = load %struct.gif_softc*, %struct.gif_softc** %7, align 8
  %19 = call i32 @GIF_UNLOCK(%struct.gif_softc* %18)
  ret i32 0
}

declare dso_local %struct.gif_softc* @ifnet_softc(i32) #1

declare dso_local i32 @GIF_LOCK(%struct.gif_softc*) #1

declare dso_local i32 @GIF_UNLOCK(%struct.gif_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
